--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,20 @@
     <h1 class="headerline">Contact</h1>
 
     <form action="/action_page.php">
+     <label for="name">Name</label>
+     <input type="text" id="name" name="name" placeholder="John Smith">
+
+     <label for="email">Email</label>
+     <input type="text" id="email" name="email" placeholder="example@gmail.com">
+
+     <label for="message">Message</label>
+     <textarea>
+     </textarea>
+
+     <input type="submit" value="Submit">
+   </form>
+
+    <!-- <form action="/action_page.php">
       Name<br>
       <input type="text" style="height: 35px; width: 595px; color: lightgray;" name="name" value="John Smith">
       <br />
@@ -49,7 +63,7 @@
       <textarea rows="15" cols="95" style="color: lightgray" name="message" form="usrform"></textarea>
       <br><br>
       <input type="submit" name="submit "value="Submit" id="submit">
-    </form>
+    </form> -->
 
 
   </div>
