--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Basic Portfolio</title>
+    <title>Basic Portfolioooooo</title>
     <meta name="description" content="DESCRIPTION">
      <link rel="stylesheet" href="assets/css/reset.css">
    <link rel="stylesheet" href="assets/css/style.css">
